<resources>
    <string name="app_name">synergy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synergy">시너지</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="sharp">#</string>
    <string name="editId_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
    <string name="editPass_hint"><font size="14">6~15자 영문/숫자 조합으로 입력</font></string>
    <string name="editNick_hint"><font size="14">2~10자 사이 한글로 입력</font></string>
    <string name="editPhone_hint"><font size="14">ex) 01012345678 (-)뺴기 입력X</font></string>
    <string name="add_to_contacts">+ 연락처에 추가</string>
    <string name="album">앨범</string>
    <string name="autocomplete_help">관심사를 반영한 컨텍스트 자동완성도움말</string>
    <string name="autocomplete_off">자동완성 끄기</string>
    <string name="back">이전</string>
    <string name="bixby_vision">빅스비 비전</string>
    <string name="blog_naver_com_synergy">blog.naver.com > synergy</string>
    <string name="call">통화</string>
    <string name="call_button">통화 버튼</string>
    <string name="camera_button">카메라 버튼</string>
    <string name="camera_screen">카메라 화면</string>
    <string name="camera_toggle">카메라 토글</string>
    <string name="cancel">취소</string>
    <string name="chatting">채팅</string>
    <string name="chatting_message">채팅+ 메시지</string>
    <string name="clip">클립</string>
    <string name="contact">연락처</string>
    <string name="contents">콘텐츠</string>
    <string name="conversation">대화</string>
    <string name="conversation_settings_button">대화 설정 버튼</string>
    <string name="creating_shared_album">+ 공유 앨범 만들기</string>
    <string name="cuter_than_i_thought">생각보다 귀여움</string>
    <string name="delete">지우기</string>
    <string name="edit">편집</string>
    <string name="emoji_button">이모지 버튼</string>
    <string name="entire">전체</string>
    <string name="expand_button">펼치기 버튼</string>
    <string name="favorite">즐겨찾기</string>
    <string name="filter">필터</string>
    <string name="flash">플래시</string>
    <string name="friend">친구</string>
    <string name="gallery">갤러리</string>
    <string name="gallery_screen">갤러리 화면</string>
    <string name="go_to_top_menu_button">상위 메뉴로 이동 버튼</string>
    <string name="grouping_similar_images_button">비슷한 이미지 묶기 버튼</string>
    <string name="help">도움말</string>
    <string name="home">홈</string>
    <string name="hungry">배고파 밥 사줘</string>
    <string name="image_button">이미지 버튼</string>
    <string name="init_date">2022년 12월 7일 수요일</string>
    <string name="init_date_mini">12월 7일</string>
    <string name="init_phone_number">010–1234–5678</string>
    <string name="init_time">오후 2:24</string>
    <string name="input_phone_num">전화번호 입력</string>
    <string name="keypad">키패드</string>
    <string name="shared_album_notice">가족과 친구들이 내가 공유한 사진과\n동영상을 각자의 기기에서 볼 수\n있습니다.</string>
    <string name="making_movie_button">영화 만들기 버튼</string>
    <string name="menu">메뉴</string>
    <string name="more">더보기</string>
    <string name="more_button">더보기 버튼</string>
    <string name="motion_photo">모션 포토</string>
    <string name="naver_logo">네이버 로고</string>
    <string name="naver_pay">네이버 페이</string>
    <string name="naver_search_hint">검색어 또는 URL 입력</string>
    <string name="naver_search_hint_2">검색어를 입력해주세요.</string>
    <string name="naver_talk">네이버 톡</string>
    <string name="new_category">새 카테고리</string>
    <string name="notification">알림</string>
    <string name="on_a_call">전화를 거는 중…</string>
    <string name="openchatting">오픈채팅</string>
    <string name="phone">전화</string>
    <string name="phone_num_text">전화번호 텍스트</string>
    <string name="photo">사진</string>
    <string name="picture">사진</string>
    <string name="plus_button">플러스 버튼</string>
    <string name="post_image">포스트 이미지</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="ratio">비율</string>
    <string name="recent_history">최근기록</string>
    <string name="record_button">녹음 버튼</string>
    <string name="report">신고</string>
    <string name="save">저장</string>
    <string name="search_button">검색 버튼</string>
    <string name="search_menu">검색 메뉴</string>
    <string name="selection_button">선택 버튼</string>
    <string name="send_button">보내기 버튼</string>
    <string name="settings">설정</string>
    <string name="seven_days_ago">7일 전</string>
    <string name="share">공유</string>
    <string name="shooting">촬영</string>
    <string name="shopping">쇼핑</string>
    <string name="singletake">싱글테이크</string>
    <string name="special_day">특별한 날</string>
    <string name="story">스토리</string>
    <string name="synergy_explanation">오늘은 특별한 앱, 바로 시너지라는 이름으로 잘 알려진 스마트폰 교육 앱에 대해 알아보겠습니다. 대장님과… 깃허브와 피그마를 이용하여 열심히…</string>
    <string name="text_message">문자 메시지</string>
    <string name="timer">타이머</string>
    <string name="video">비디오</string>
    <string name="video_call">영상 통화</string>
    <string name="wallet">지갑</string>
    <string name="title_activity_ma">maActivity</string>
    <string name="title_activity_exam_call_result3">ExamCallResult3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
