<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/naver_post"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:padding="12dp"
    android:background="@drawable/naver_post">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/usercircle"
            android:contentDescription="@string/profile_image"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/synergy"
            android:textSize="16sp"
            android:textColor="@color/naver_black"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/seven_days_ago"
            android:textSize="12sp"
            android:textColor="@color/naver_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/more_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:src="@drawable/naver_post_more_button"
                android:scaleType="centerInside"
                android:background="@null"
                android:contentDescription="@string/more"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synergy"
            android:textSize="16sp"
            android:textColor="@color/naver_black"/>

        <TextView
            android:id="@+id/post_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuter_than_i_thought"
            android:textSize="12sp"
            android:textColor="@color/naver_black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/sample_screenshot2"
        android:contentDescription="@string/post_image"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/todo_circle"
            android:scaleType="centerInside"
            android:background="@null"
            android:contentDescription="@string/share"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:src="@drawable/todo_circle"
                android:scaleType="centerInside"
                android:background="@null"
                android:contentDescription="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
